--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,6 @@
 #characters-table{
 	margin: auto;
+	margin-bottom: 15px;
 	border-radius: 15px;
 	font-family: "arial";
 	color: #808080;
@@ -10,19 +11,16 @@
 }
 
 #characters-table tr:nth-child(even){
-	background-color: #F5F5F5;
-	border: none;
+	background-color: #F5F5F5;	
 }
 
 #characters-table tr:nth-child(odd){
 	background-color: #FFF;
-	border: none;
 }
 
 #characters-table thead th{
 	background-color: #7B68EE;
 	color: #FFF;
-	border: none;
 	font-weight: bold;
 	text-align: center;
 	height: 60px;
@@ -52,32 +50,52 @@
 }
 
 #nextPage{
+	background-color: #FFF;
 	margin-top: 10px;
 	margin-left: 5px;
+	border: none;
+	cursor: pointer;
 }
 #previousPage{
+	background-color: #FFF;
 	margin-top: 10px;
 	right: 50px;
 	margin-left:5px;
+	border: none;
+	cursor: pointer;
 }
 
 .btn{
+	display: inline-block;
+	background-color: #FFF;
 	margin-top:10px;
+	margin-bottom:15px;
 	position: relative;
 	margin-left:5px;
+	border: none;
+	padding: 8px 12px;
+	border-radius: 5px; 
+	font-size: 16px;
+	cursor: pointer;
 }
 
 .btnActive{
+	display: inline-block;
 	font-size: 14px;
-	background-color: #A9A9A9;
-	color: #000000; 
-	width: 20px;
-	height: 20px;
-	border: solid 1px;
-	border-color:#000000; 
+	background-color: #7B68EE;
+	border: none;
+	color: #FFF; 
 	margin: 5px;
+	padding: 8px 12px;
+	border-radius: 5px;
+	font-size: 16px;
 }
 
 #div-button{
-	margin-left: 60px;
+	margin-right:5%;
+	float: right;
+}
+
+.btn:hover:not(.btnActive){
+	background-color: #F5F5F5;
 }
